--- a/Maze_Project/Maze_Project.vcxproj
+++ b/Maze_Project/Maze_Project.vcxproj
@@ -90,7 +90,7 @@
     <ClCompile Include="Menu.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Board.h" />
+    <QtMoc Include="Board.h" />
     <ClInclude Include="Consts.h" />
     <QtMoc Include="Menu.h" />
     <ClInclude Include="Player.h" />
