--- a/Maze_Project/Maze_Project.vcxproj.filters
+++ b/Maze_Project/Maze_Project.vcxproj.filters
@@ -34,13 +34,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Board.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Consts.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Music.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -51,6 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Menu.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="Board.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
